--- a/articles/cost-management-billing/reservations/index.yml
+++ b/articles/cost-management-billing/reservations/index.yml
@@ -10,13 +10,13 @@ metadata:
   ms.collection: collection
   author: bandersmsft
   ms.author: banders
-  ms.date: 03/01/2021
-  ms.openlocfilehash: b25d522d5db9f513628e43724cb1abde9f55e99c
-  ms.sourcegitcommit: f3ec73fb5f8de72fe483995bd4bbad9b74a9cc9f
+  ms.date: 04/15/2021
+  ms.openlocfilehash: c7c9a72e3954598e0cb3265e0533ccbd14b68e4b
+  ms.sourcegitcommit: 49b2069d9bcee4ee7dd77b9f1791588fe2a23937
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 03/04/2021
-  ms.locfileid: "102040820"
+  ms.lasthandoff: 04/16/2021
+  ms.locfileid: "107532655"
 landingContent:
 - title: Erwerben von Reservierungen
   linkLists:
@@ -24,6 +24,12 @@ landingContent:
     links:
     - text: Was sind Azure-Reservierungen?
       url: save-compute-costs-reservations.md
+    - text: Empfehlungen für den Reservierungserwerb
+      url: reserved-instance-purchase-recommendations.md
+    - text: Flexibilität bei der Instanzgröße
+      url: ../../virtual-machines/reserved-vm-instance-size-flexibility.md?toc=/azure/cost-management-billing/reservations/toc.json
+    - text: Separate Abrechnung von Softwarekosten für Windows und SQL
+      url: reserved-instance-windows-software-costs.md
   - linkListType: how-to-guide
     links:
     - text: Kaufen einer Reservierung
@@ -36,16 +42,24 @@ landingContent:
     links:
     - text: Anwendung eines Reservierungsrabatts
       url: reservation-discount-application.md
-- title: Verwalten von Reservierungen
+- title: Verwalten von Reservierungen nach dem Kauf
   linkLists:
   - linkListType: how-to-guide
     links:
-    - text: Verwalten von Reservierungen
-      url: manage-reserved-vm-instance.md
-    - text: Anzeigen von Reservierungen und Verwalten von Berechtigungen
+    - text: Berechtigungen zum Anzeigen und Verwalten von Reservierungen
       url: view-reservations.md
+    - text: Ändern des Reservierungsumfangs, Aufteilen und Zusammenführen
+      url: manage-reserved-vm-instance.md
     - text: Reservierungen für Umtausch und Erstattung
       url: exchange-and-refund-azure-reservations.md
+- title: Melden von Kosten nach dem Kauf
+  linkLists:
+  - linkListType: how-to-guide
+    links:
+    - text: Rückbuchen von Azure-Reservierungskosten
+      url: charge-back-usage.md
+    - text: Anzeigen von Transaktionen für Reservierungseinkäufe und -erstattungen
+      url: view-purchase-refunds.md
   - linkListType: reference
     links:
     - text: Reservierungs-APIs
