--- a/articles/dev-spaces/index.yml
+++ b/articles/dev-spaces/index.yml
@@ -1,9 +1,9 @@
 ### YamlMime:Landing
 title: Dokumentation zu Azure Dev Spaces
-summary: Azure Dev Spaces wird eingestellt und funktioniert ab dem 31. Oktober 2023 nicht mehr.
+summary: Azure Dev Spaces wird eingestellt und funktioniert ab dem 31. Oktober 2023 nicht mehr. Es können keine neuen Controller bereitgestellt werden. Verfügbare Regionen werden geschlossen, sobald darin keine Kundenaktivitäten mehr zu verzeichnen sind.
 metadata:
   title: Dokumentation zu Azure Dev Spaces
-  description: Azure Dev Spaces wird eingestellt und funktioniert ab dem 31. Oktober 2023 nicht mehr.
+  description: Azure Dev Spaces wird eingestellt und funktioniert ab dem 31. Oktober 2023 nicht mehr. Es können keine neuen Controller bereitgestellt werden. Verfügbare Regionen werden geschlossen, sobald darin keine Kundenaktivitäten mehr zu verzeichnen sind.
   services: azure-dev-spaces
   ms.service: azure-dev-spaces
   ms.topic: landing-page
@@ -11,12 +11,12 @@ metadata:
   ms.author: zarhoads
   manager: gwallace
   ms.date: 10/29/2020
-  ms.openlocfilehash: a3b3ca8c87871b9ae8e1d6a3db32d9e2051215b6
-  ms.sourcegitcommit: 3bdeb546890a740384a8ef383cf915e84bd7e91e
+  ms.openlocfilehash: 052e625961aa793d0ffe6ae3faccdc634c2e6a51
+  ms.sourcegitcommit: 2cb7772f60599e065fff13fdecd795cce6500630
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 10/30/2020
-  ms.locfileid: "93072030"
+  ms.lasthandoff: 05/06/2021
+  ms.locfileid: "108802700"
 landingContent:
 - title: Bridge to Kubernetes
   linkLists:
