--- a/articles/managed-instance-apache-cassandra/TOC.yml
+++ b/articles/managed-instance-apache-cassandra/TOC.yml
@@ -4,25 +4,40 @@
   items:
     - name: Was ist Azure Managed Instance for Apache Cassandra?
       href: introduction.md
-- name: Konzepte
-  items:
-    - name: Häufig gestellte Fragen
-      href: faq.md
-    - name: "Gegenüberstellung von Managed Instance und Cassandra-API für Azure Cosmos\_DB"
-      href: compare-cosmosdb-managed-instance.md
 - name: Schnellstarts
   items:
     - name: 'Erstellen eines Clusters: Portal'
       href: create-cluster-portal.md
     - name: 'Erstellen eines Clusters: CLI'
+      displayName: 'az managed-cassandra, cluster, datacenter, connect'
       href: create-cluster-cli.md
+    - name: 'Erstellen eines regionsübergreifenden Clusters: CLI'
+      href: create-multi-region-cluster.md
     - name: Konfigurieren eines Hybridclusters
       href: configure-hybrid-cluster.md
     - name: Bereitstellen eines Spark-Clusters mit Databricks
       href: deploy-cluster-databricks.md
+- name: Konzepte
+  items:
+    - name: Häufig gestellte Fragen
+      displayName: 'cost, region, monitor, backup'
+      href: faq.md
+    - name: "Gegenüberstellung von Managed Instance und Cassandra-API für Azure Cosmos\_DB"
+      href: compare-cosmosdb-managed-instance.md
 - name: Anleitungen
   items:
     - name: Verwalten mit der Azure CLI
+      displayName: 'az managed-cassandra, cluster, datacenter'
       href: manage-resources-cli.md
     - name: Visualisieren von Metriken in Prometheus mit Grafana
       href: visualize-prometheus-grafana.md
+- name: Verweis
+  items:
+    - name: REST-API
+      items:
+        - name: Cassandra-Cluster
+          href: /rest/api/cosmos-db-resource-provider/2021-03-01-preview/cassandraclusters
+        - name: Cassandra-Rechenzentren
+          href: /rest/api/cosmos-db-resource-provider/2021-03-01-preview/cassandradatacenters
+    - name: Azure CLI
+      href: /cli/azure/managed-cassandra
