--- a/articles/migrate/toc.yml
+++ b/articles/migrate/toc.yml
@@ -16,6 +16,10 @@
           href: common-questions-discovery-assessment.md
         - name: Tool für die Servermigration
           href: common-questions-server-migration.md
+- name: Schnellstarts
+  items:
+    - name: 'Erstellen eines Projekts: ARM-Vorlage'
+      href: quickstart-create-migrate-project.md
 - name: Tutorials
   items:
     - name: Entdecken
@@ -73,7 +77,7 @@
     - name: Containerisieren
       items:
         - name: Containerisieren von ASP.NET-Apps und Migrieren zu AKS
-          href: tutorial-containerize-aspnet-kubernetes.md
+          href: tutorial-app-containerization-aspnet-kubernetes.md
         - name: Containerisieren von Java-Web-Apps und Migrieren zu AKS
           href: tutorial-containerize-java-kubernetes.md
 - name: Konzepte
@@ -85,7 +89,7 @@
     - name: Sicherheit
       items:
         - name: Sicherheitsbaseline
-          href: security-baseline.md
+          href: /security/benchmark/azure/baselines/migrate-security-baseline?context=/azure/migrate/context/migrate-context
     - name: Entdecken
       items:
         - name: Unterstützung für VMware-Ermittlung
@@ -130,6 +134,8 @@
   items:
     - name: Erstellen und Verwalten von Azure Migrate-Projekten
       href: create-manage-projects.md
+    - name: Verwenden von Azure Migrate mit privater Verbindung
+      href: how-to-use-azure-migrate-with-private-endpoints.md
     - name: Vorbereiten der Verwendung von ISV-Tools/Movere
       href: prepare-isv-movere.md
     - name: Entdecken
@@ -210,6 +216,8 @@
           href: how-to-delete-project.md
         - name: Arbeiten mit der vorherigen Version von Azure Migrate
           href: migrate-v1.md
+        - name: Durchführen des Onboardings für lokale Server in der virtuellen VMware-Umgebung in Azure Arc
+          href: onboard-to-azure-arc-with-azure-migrate.md
         - name: "Verwalten von Migrationsprojekten mit Azure\_Lighthouse"
           href: ../lighthouse/how-to/migration-at-scale.md?toc=/azure/migrate/toc.json&bc=/azure/migrate/breadcrumb/toc.json
 - name: Problembehandlung
@@ -234,8 +242,13 @@
           href: troubleshoot-changed-block-tracking-replication.md
 - name: Verweis
   items:
+    - name: Azure CLI
+      href: /cli/azure/offazure
     - name: Azure PowerShell
       href: /powershell/module/az.migrate/
+    - name: Azure Policy-Integrationen
+      displayName: 'samples, policies, definitions'
+      href: ./policy-reference.md
 - name: Ressourcen
   items:
     - name: Migration im Cloud Adoption Framework
